--- a/app/src/main/res/layout/list_item_sound.xml
+++ b/app/src/main/res/layout/list_item_sound.xml
@@ -3,10 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     >
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.example.beatbox.SoundViewModel" />
+    </data>
     <Button
+        android:id="@+id/sound_button"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:text="@{viewmodel.title}"
         tools:text="Sound name"/>
 </layout>
