--- a/app/src/main/res/layout/list_item_sound.xml
+++ b/app/src/main/res/layout/list_item_sound.xml
@@ -14,6 +14,7 @@
         android:layout_height="120dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:onClick="@{() -> viewmodel.onButtonClicked()}"
         android:text="@{viewmodel.title}"
         tools:text="Sound name"/>
 </layout>
