--- a/app/src/main/res/layout/list_item_sound.xml
+++ b/app/src/main/res/layout/list_item_sound.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="viewmodel"
             type="com.example.beatbox.SoundViewModel" />
     </data>
-    <Button
-        android:id="@+id/sound_button"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:onClick="@{() -> viewmodel.onButtonClicked()}"
-        android:text="@{viewmodel.title}"
-        tools:text="Sound name"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
+
+        <Button
+            android:id="@+id/sound_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:onClick="@{() -> viewmodel.onButtonClicked()}"
+            android:text="@{viewmodel.title}"
+            tools:text="Sound name" />
+    </FrameLayout>
 </layout>
